Retools the undo service.